--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@ layout: default
                     url: title.url
                 });
 
-                request.onsuccess = function(event) {
-                    console.log('Data stored successfully');
-                };
-
-                request.onerror = function(event) {
-                    console.error('Error storing data:', event.target.error);
-                };
+                // request.onsuccess = function(event) {
+                //     console.log('Data stored successfully');
+                // };
+                //
+                // request.onerror = function(event) {
+                //     console.error('Error storing data:', event.target.error);
+                // };
             });
         }
 
