--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ layout: default
                 // request.onsuccess = function(event) {
                 //     console.log('Data stored successfully');
                 // };
-                //
-                // request.onerror = function(event) {
-                //     console.error('Error storing data:', event.target.error);
-                // };
+
+                request.onerror = function(event) {
+                    console.error('Error storing data:', event.target.error);
+                };
             });
         }
 
