--- a/index.html
+++ b/index.html
@@ -93,15 +93,8 @@ layout: default
 <body>
 <main class="container">
     <section>
-          <h1>文章目录</h1>
-  <ul>
-    {% for post in site.posts %}
-      <li>
-        <a href="{{ post.url }}">{{ post.date | date: "%Y-%m-%d" }} - {{ post.title }}</a>
-      </li>
-    {% endfor %}
-  </ul>
         <div class="content">
+            {{site.categories}}
             {% assign posts_by_year = site.posts | group_by_exp:"post", "post.date | date: '%Y'" %}
             {% for year in posts_by_year %}
             <button class="accordion">{{ year.name }}</button>
